<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/unselected_background"
    android:fillViewport="true"
    tools:ignore="Overdraw"
    tools:context=".Edit_profile">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iv_backarrow"
            android:layout_marginTop="20dp"
            android:padding="20dp"
            android:src="@drawable/ic_back_arrow_black"
            android:contentDescription="@string/back_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_hello"
            android:layout_marginTop="25dp"
            android:layout_marginStart="17dp"
            android:layout_marginLeft="17dp"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/textColorBlack"
            android:textSize="22sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:layout_marginStart="17dp"
            android:layout_marginLeft="17dp"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/textColorBlack"
            android:textSize="22sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtFulltNameEdtProfile"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:drawablePadding="50dp"
            android:hint="@string/fullname"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/edtMobileEdtProfile"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:drawablePadding="5dp"
            android:hint="@string/mobile"
            android:inputType="phone"
            android:textStyle="italic" />


        <EditText
            android:id="@+id/edtAgeedtprofile"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:drawablePadding="5dp"
            android:hint="@string/age"
            android:inputType="textEmailAddress"
            android:textStyle="italic" />



        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@color/design_default_color_primary"
            android:text="@string/action_save"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>


</RelativeLayout>