<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.bottomnavigation.BottomNavigationView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_bar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_gravity="bottom"
    android:background="#ffffff"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="3"
    app:layout_behavior="com.mypackage.BottomNavigationBehavior">

    <View
        style="@style/ViewLineStyle"
        android:background="@color/viewBottomBarColor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="6dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/homePage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_home_selected"
            android:drawablePadding="2dp"
            android:gravity="center_horizontal"
            android:text="@string/home"
            android:textColor="@color/appThemeColor"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/bookings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_ticket"
            android:gravity="center_horizontal"
            android:text="@string/bookings"
            android:textColor="@color/darkColor"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_account_new"
            android:gravity="center_horizontal"
            android:text="@string/account"
            android:textColor="@color/darkColor"
            android:textSize="10sp"
            tools:ignore="SmallSp" />
    </LinearLayout>


</com.google.android.material.bottomnavigation.BottomNavigationView>